--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "crawlee": "^3.16.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "google-auth-library": "^10.6.1",
+    "googleapis": "^171.4.0",
     "playwright": "^1.58.2"
   }
 }
