--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "website-analyzer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc",
     "build:client": "cd client && npm install && npm run build"
   },
   "keywords": [],
