--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@google/genai": "^1.42.0",
+    "@types/archiver": "^7.0.0",
+    "archiver": "^7.0.1",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
     "crawlee": "^3.16.0",
